crates/aranya-policy-lang/tests/data/policy_test.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
Syntax error: line 23 column 5:   --> 23:5
   |
23 |     policy {
   |     ^---
   |
   = expected seal_block
